--- a/Solution/FastWorkspace.Client/AppLocales.fr.resx
+++ b/Solution/FastWorkspace.Client/AppLocales.fr.resx
@@ -144,6 +144,9 @@
   <data name="Configuration.Language.Label" xml:space="preserve">
     <value>Langue</value>
   </data>
+  <data name="Configuration.Reset.Button" xml:space="preserve">
+    <value>Réinitialiser</value>
+  </data>
   <data name="Configuration.Save.Button" xml:space="preserve">
     <value>Enregistrer</value>
   </data>
@@ -157,9 +160,15 @@
     <value>Clair</value>
   </data>
   <data name="Configuration.Title" xml:space="preserve">
-    <value>Configuration</value>
+    <value>Paramètres</value>
   </data>
   <data name="Configuration.WelcomeMessage" xml:space="preserve">
     <value>Bienvenue dans Fast Workspace ! Veuillez configurer l'application avant de pouvoir mettre en place vos espaces de travail.</value>
+  </data>
+  <data name="Navigation.Configuration" xml:space="preserve">
+    <value>Paramètres</value>
+  </data>
+  <data name="Navigation.Dashboards" xml:space="preserve">
+    <value>Espaces de travail</value>
   </data>
 </root>
