--- a/Solution/FastWorkspace.Client/AppLocales.en.resx
+++ b/Solution/FastWorkspace.Client/AppLocales.en.resx
@@ -165,7 +165,7 @@
   <data name="Configuration.WelcomeMessage" xml:space="preserve">
     <value>Welcome to Fast Workspace! Please configure your app before seting up your workspaces.</value>
   </data>
-  <data name="Dashboard.AddWorkspaceButton" xml:space="preserve">
+  <data name="Dashboard.CreateWorkspaceButton" xml:space="preserve">
     <value>Add</value>
   </data>
   <data name="Dashboard.Description" xml:space="preserve">
@@ -174,10 +174,97 @@
   <data name="Dashboard.Title" xml:space="preserve">
     <value>Workspaces</value>
   </data>
+  <data name="Errors.CreateWorkspace" xml:space="preserve">
+    <value>An error occured while creating the workspace</value>
+  </data>
+  <data name="Errors.DeleteWorkspace" xml:space="preserve">
+    <value>An error occured while deleting the workspace</value>
+  </data>
+  <data name="Errors.DuplicateWorkspace" xml:space="preserve">
+    <value>An error occured while duplicating the workspace</value>
+  </data>
+  <data name="Errors.GetWorkspaces" xml:space="preserve">
+    <value>An error occured while getting the workspaces</value>
+  </data>
+  <data name="Errors.UpdateWorkspace" xml:space="preserve">
+    <value>An error occured while updating the workspace</value>
+  </data>
+  <data name="GlobalError.Button" xml:space="preserve">
+    <value>Refresh the application</value>
+  </data>
+  <data name="GlobalError.Message" xml:space="preserve">
+    <value>An unhandled error occured, please try again or</value>
+  </data>
+  <data name="GlobalError.Message.Link" xml:space="preserve">
+    <value>signal the issue on GitHub</value>
+  </data>
+  <data name="GlobalError.Title" xml:space="preserve">
+    <value>This application doesn't feel well...</value>
+  </data>
   <data name="Navigation.Configuration" xml:space="preserve">
     <value>Configuration</value>
   </data>
   <data name="Navigation.Dashboards" xml:space="preserve">
     <value>Workspaces</value>
+  </data>
+  <data name="Notifications.CreateWorkspace" xml:space="preserve">
+    <value>The workspace has been created successfully</value>
+  </data>
+  <data name="Notifications.DeleteWorkspace" xml:space="preserve">
+    <value>The workspace has been deleted successfully</value>
+  </data>
+  <data name="Notifications.DuplicateWorkspace" xml:space="preserve">
+    <value>The workspace has been duplicated successfully</value>
+  </data>
+  <data name="Notifications.UpdateWorkspace" xml:space="preserve">
+    <value>The workspace has been updated successfully</value>
+  </data>
+  <data name="Workspace.Card.DeleteMenu" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="Workspace.Card.DuplicateMenu" xml:space="preserve">
+    <value>Duplicate</value>
+  </data>
+  <data name="Workspace.Card.EditMenu" xml:space="preserve">
+    <value>Edit</value>
+  </data>
+  <data name="Workspace.Dialog.CancelButton" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="Workspace.Dialog.Create.SubmitButton" xml:space="preserve">
+    <value>Add</value>
+  </data>
+  <data name="Workspace.Dialog.Create.Title" xml:space="preserve">
+    <value>Create a new workspace</value>
+  </data>
+  <data name="Workspace.Dialog.Delete.CancelButton" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="Workspace.Dialog.Delete.ConfirmButton" xml:space="preserve">
+    <value>Delete</value>
+  </data>
+  <data name="Workspace.Dialog.Delete.Message" xml:space="preserve">
+    <value>Are you sure you want to delete workspace "{0}"? This action is final.</value>
+  </data>
+  <data name="Workspace.Dialog.Delete.Title" xml:space="preserve">
+    <value>Delete workspace</value>
+  </data>
+  <data name="Workspace.Dialog.Description.Label" xml:space="preserve">
+    <value>Description</value>
+  </data>
+  <data name="Workspace.Dialog.Edit.SubmitButton" xml:space="preserve">
+    <value>Save</value>
+  </data>
+  <data name="Workspace.Dialog.Edit.Title" xml:space="preserve">
+    <value>Edit workspace</value>
+  </data>
+  <data name="Workspace.Dialog.Name.Label" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="Workspace.Dialog.Name.RequiredError" xml:space="preserve">
+    <value>Workspace name is required!</value>
+  </data>
+  <data name="Workspace.Duplicate.Name" xml:space="preserve">
+    <value>Copy of {0}</value>
   </data>
 </root>
