--- a/Solution/FastWorkspace.Client/AppLocales.fr.resx
+++ b/Solution/FastWorkspace.Client/AppLocales.fr.resx
@@ -270,4 +270,10 @@
   <data name="Workspace.Script.ExecuteButton" xml:space="preserve">
     <value>Run script</value>
   </data>
+  <data name="Workspace.Script.Highlight.Label" xml:space="preserve">
+    <value>Style code</value>
+  </data>
+  <data name="Workspace.Script.StartChevron.Label" xml:space="preserve">
+    <value>Chevron en début de ligne</value>
+  </data>
 </root>
