--- a/Solution/FastWorkspace.Client/Locales/AppLocales.en.resx
+++ b/Solution/FastWorkspace.Client/Locales/AppLocales.en.resx
@@ -255,4 +255,10 @@
   <data name="Workspace.Dialog.Run.Title" xml:space="preserve">
     <value>Run Script {0}</value>
   </data>
+  <data name="Workspace.Card.OpenScriptTooltip" xml:space="preserve">
+    <value>Open script</value>
+  </data>
+  <data name="Workspace.Dialog.View.Description" xml:space="preserve">
+    <value>Description</value>
+  </data>
 </root>
